Nodegroup of death #34694

Closed
opened 2013-03-19 13:48:27 +01:00 by stinky wizzleteet · 5 comments

%%%--- Operating System, Graphics card ---
Ubuntu 12.10 nvidia 350m and 560ti

- Blender version with error, and version that worked ---

blender 266a does not crash.daily builds crash like it's 3dsmax

- Short description of error ---

A particular nodegroup crashes blender when the group is touched.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

Open the attched file, touch the nodegroup, like TAB to open: Poof, no more blender. Just disappears.

%%%

%%%--- Operating System, Graphics card --- Ubuntu 12.10 nvidia 350m and 560ti - Blender version with error, and version that worked --- blender 266a does not crash.daily builds crash like it's 3dsmax - Short description of error --- A particular nodegroup crashes blender when the group is touched. - Steps for others to reproduce the error (preferably based on attached .blend file) --- Open the attched file, touch the nodegroup, like TAB to open: Poof, no more blender. Just disappears. %%%

Changed status to: 'Open'

Changed status to: 'Open'

%%%Fable Fox here:

Yep, it crashed too. Official 2.66a build.

Win 7 / 64 bit. NVidia GT240.

As mentioned, open the nodegroup via tab, and Blender just disappear.%%%

%%%Fable Fox here: Yep, it crashed too. Official 2.66a build. Win 7 / 64 bit. NVidia GT240. As mentioned, open the nodegroup via tab, and Blender just disappear.%%%
Member

%%%Fixed in r55444. This was actually caused by a buggy implementation in the Bokeh Blur node, causing unpredictable memory errors. Not entirely sure why it happened only in groups, probably the allocated memory then got placed in a position where exceeding it could do more harm. Anyway, thanks for reporting!%%%

%%%Fixed in r55444. This was actually caused by a buggy implementation in the Bokeh Blur node, causing unpredictable memory errors. Not entirely sure why it happened only in groups, probably the allocated memory then got placed in a position where exceeding it could do more harm. Anyway, thanks for reporting!%%%
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

%%%Holy hang gliders batman ! Those are some debuggin chops!

Bokeh blur node, who would have thought that....%%%

%%%Holy hang gliders batman ! Those are some debuggin chops! Bokeh blur node, who would have thought that....%%%
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#34694
No description provided.